added tailwind to project

--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="românească">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>&copy Kindle Romania</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Kindle Romania</h1>
+    </header>
+    <main class="wrapper">
+        <h2>Bun venit pe Kindle Romania!</h2>
+        <p>Descoperă o selecție vastă de cărți în limba română, disponibile gratuit pentru Kindle în întreaga lume! 
+           Indiferent unde te afli, ai acces la o bibliotecă virtuală bogată în opere literare de excepție, toate la doar un click distanță. 
+           Înconjurați-vă cu povești captivante, aventuri pline de suspans și opere remarcabile, toate oferite în limba română pentru plăcerea ta de lectură. Aducem bucuria lecturii direct pe dispozitivul tău Kindle, indiferent de locul în care te afli. 
+           Intră acum și explorează cultura și literatura românească, într-o experiență de lectură pe care nu o vei uita!
+        </p>
+        <div class="books-container">
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii">
+                </a>
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii">
+                </a>
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii">
+                </a>
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii">
+                </a>
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii">
+                </a>
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
