Added details about page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Kindle Romania</h1>
+        <p>Website in stadiu de prototip</p>
     </header>
     <main class="wrapper">
         <h2>Bun venit pe Kindle Romania!</h2>
