--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                 </a>
                 <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz.
+                   A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. 
+                   Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
             </div>
             <div class="books-card">
