--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./output.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>&copy Kindle Romania</title>
 </head>
 <body>
@@ -64,6 +64,52 @@
                 </p>
             </div>
         </div>
+        <div class="books-container">
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii">
+                </a>
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii">
+                </a>
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii">
+                </a>
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii">
+                </a>
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii">
+                </a>
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+            </div>
     </main>
 </body>
 </html>
