finished layout for desktop version

--- a/index.html
+++ b/index.html
@@ -34,6 +34,39 @@
             </div>
             <div class="books-card">
                 <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                </a>
+                <span class="bg-color">
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+                 </span>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                </a>
+                <span class="bg-color">
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+                 </span>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                </a>
+                <span class="bg-color">
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+                 </span>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
                     <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
                 <h2>Pretul secant al genunii</h2>
@@ -74,11 +107,57 @@
         <div class="books-container">
             <div class="books-card">
                 <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                </a>
+                <span class="bg-color">
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+                 </span>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                </a>
+                <span class="bg-color">
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+                 </span>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                </a>
+                <span class="bg-color">
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+                 </span>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                </a>
+                <span class="bg-color">
+                <h2>Pretul secant al genunii</h2>
+                <h2>Adrian Rogoz</h2>
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                </p>
+                 </span>
+            </div>
+            <div class="books-card">
+                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
                     <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
                 <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz.
+                   A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. 
+                   Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
             </div>
             <div class="books-card">
@@ -108,15 +187,7 @@
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
             </div>
-            <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                    <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
-                </a>
-                <h2>Pretul secant al genunii</h2>
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
-            </div>
+        </div>
     </main>
 </body>
 </html>
