created and added book few book covers

--- a/index.html
+++ b/index.html
@@ -23,44 +23,40 @@
         <div class="books-container">
             <div class="books-card">
                 <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                <img src="./media/pretul_secant.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
                 <span class="bg-color">
-                <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
                  </span>
             </div>
             <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                <a href="./media/Alexandru Talex - Panait Istrati.mobi" download>
+                <img src="./media/panait_istrati.jpg" alt="coperta Panait istrati" class="book-img-cover">
                 </a>
                 <span class="bg-color">
-                <h2>Pretul secant al genunii</h2>
-                <h2>Adrian Rogoz</h2>
+                <h2>Alexandru Talex</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
                  </span>
             </div>
             <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                <a href="./media/Andrei Plesu - Minima moralia.mobi" download>
+                <img src="./media/minima_moralia.jpg" alt="coperta minima_moralia" class="book-img-cover">
                 </a>
                 <span class="bg-color">
-                <h2>Pretul secant al genunii</h2>
-                <h2>Adrian Rogoz</h2>
+                <h2>Andrei Plesu</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
                  </span>
             </div>
             <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                <a href="./media/Anton Holban - Ioana.mobi" download>
+                <img src="./media/ioana.jpg" alt="coperta Ioana" class="book-img-cover">
                 </a>
                 <span class="bg-color">
-                <h2>Pretul secant al genunii</h2>
-                <h2>Adrian Rogoz</h2>
+                <h2>Anton Holban</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
                  </span>
@@ -69,7 +65,6 @@
                 <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
                     <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
-                <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz.
                    A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. 
@@ -80,7 +75,6 @@
                 <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
                     <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
-                <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
@@ -89,7 +83,6 @@
                 <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
                     <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
-                <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
@@ -98,7 +91,6 @@
                 <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
                     <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
-                <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
@@ -110,7 +102,6 @@
                 <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
                 <span class="bg-color">
-                <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
@@ -121,7 +112,6 @@
                 <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
                 <span class="bg-color">
-                <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
@@ -132,7 +122,6 @@
                 <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
                 <span class="bg-color">
-                <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
@@ -143,7 +132,6 @@
                 <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
                 <span class="bg-color">
-                <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
@@ -153,7 +141,6 @@
                 <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
                     <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
-                <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz.
                    A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. 
@@ -164,7 +151,6 @@
                 <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
                     <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
-                <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
@@ -173,7 +159,6 @@
                 <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
                     <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
-                <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
@@ -182,7 +167,6 @@
                 <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
                     <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
-                <h2>Pretul secant al genunii</h2>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
