added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
                 </p>
                  </span>
             </div>
+        </div>
+        <div class="books-container">
             <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                    <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                <a href="./media/Bogdan Ficeac - Tehnici de manipulare.mobi" download>
+                    <img src="./media/tehnici.jpg" alt="coperta tehnici de manipulare" class="book-img-cover">
                 </a>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz.
@@ -72,105 +74,30 @@
                 </p>
             </div>
             <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                    <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                <a href="./media/Camil Baciu - Revolta Creierilor.mobi" download>
+                    <img src="./media/revolta.jpg" alt="coperta Revolta Creierilor" class="book-img-cover">
                 </a>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
             </div>
             <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                    <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                <a href="./media/Constantin Chirita - Ingerul alb.mobi" download>
+                    <img src="./media/ingerul.jpg" alt="coperta Ingerul Alb" class="book-img-cover">
                 </a>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
             </div>
             <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                    <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                <a href="./media/Constantin Chirita - Pescarusul alb.mobi" download>
+                    <img src="./media/pescarusul.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
                 <h2>Adrian Rogoz</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
             </div>
         </div>
-        <div class="books-container">
-            <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
-                </a>
-                <span class="bg-color">
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
-                 </span>
-            </div>
-            <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
-                </a>
-                <span class="bg-color">
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
-                 </span>
-            </div>
-            <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
-                </a>
-                <span class="bg-color">
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
-                 </span>
-            </div>
-            <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
-                </a>
-                <span class="bg-color">
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
-                 </span>
-            </div>
-            <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                    <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
-                </a>
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz.
-                   A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. 
-                   Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
-            </div>
-            <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                    <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
-                </a>
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
-            </div>
-            <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                    <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
-                </a>
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
-            </div>
-            <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
-                    <img src="./media/Prețul_secant_al_genunii.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
-                </a>
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
-            </div>
         </div>
     </main>
 </body>
