--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
                 <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
                 <img src="./media/pretul_secant.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
-                <span class="bg-color">
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
+                <span class="book-description">
+                    <h2>Adrian Rogoz</h2>
+                    <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
+                    </p>
                  </span>
             </div>
             <div class="books-card">
                 <a href="./media/Alexandru Talex - Panait Istrati.mobi" download>
                 <img src="./media/panait_istrati.jpg" alt="coperta Panait istrati" class="book-img-cover">
                 </a>
-                <span class="bg-color">
+                <span class="book-description">
                 <h2>Alexandru Talex</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
@@ -45,7 +45,7 @@
                 <a href="./media/Andrei Plesu - Minima moralia.mobi" download>
                 <img src="./media/minima_moralia.jpg" alt="coperta minima_moralia" class="book-img-cover">
                 </a>
-                <span class="bg-color">
+                <span class="book-description">
                 <h2>Andrei Plesu</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
@@ -55,7 +55,7 @@
                 <a href="./media/Anton Holban - Ioana.mobi" download>
                 <img src="./media/ioana.jpg" alt="coperta Ioana" class="book-img-cover">
                 </a>
-                <span class="bg-color">
+                <span class="book-description">
                 <h2>Anton Holban</h2>
                 <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
                 </p>
