--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>Kindle Romania</h1>
         <p>Website in stadiu de prototip</p>
+        <p>cartile nu vor avea descriere din pacate.</p>
     </header>
     <main class="wrapper">
         <div class="website-description">
