added corespondent titles to books

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <header>
         <h1>Kindle Romania</h1>
         <p>Website in stadiu de prototip</p>
-        <p>cartile nu vor avea descriere din pacate.</p>
     </header>
     <main class="wrapper">
         <div class="website-description">
@@ -60,35 +59,34 @@
                 <a href="./media/Bogdan Ficeac - Tehnici de manipulare.mobi" download>
                     <img src="./media/tehnici.jpg" alt="coperta tehnici de manipulare" class="book-img-cover">
                 </a>
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz.
-                    A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. 
-                    Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
+                <span class="book-description"> 
+                <h2>Bogdan Ficeac</h2>
+                </span>
             </div>
             <div class="books-card">
                 <a href="./media/Camil Baciu - Revolta Creierilor.mobi" download>
                     <img src="./media/revolta.jpg" alt="coperta Revolta Creierilor" class="book-img-cover">
                 </a>
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
+                <span class="book-description"> 
+                <h2>Camil Baciu</h2>
+                </span>
             </div>
             <div class="books-card">
                 <a href="./media/Constantin Chirita - Ingerul alb.mobi" download>
                     <img src="./media/ingerul.jpg" alt="coperta Ingerul Alb" class="book-img-cover">
                 </a>
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
+                <span class="book-description"> 
+                <h2>Constantin Chirita</h2>
+                </span>
             </div>
             <div class="books-card">
                 <a href="./media/Constantin Chirita - Pescarusul alb.mobi" download>
+                    <span>
                     <img src="./media/pescarusul.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
-                <h2>Adrian Rogoz</h2>
-                <p>Prețul secant al genunii este o colecție de povestiri științifico-fantastice ale scriitorului român Adrian Rogoz. A apărut prima dată în 1974 la Editura Albatros, Fantastic Club. Conține șase povestiri ale lui Adrian Rogoz.
-                </p>
+                <span class="book-description"> 
+                <h2>Constantin Chirita</h2>
+                </span>
             </div>
         </div>
     </div>
